--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@metamask/onboarding": "^1.0.1",
     "arraybuffer-loader": "^1.0.6",
     "autoprefixer": "^9.0.1",
+    "axios": "^0.26.1",
     "base64-loader": "1.0.0",
     "bowser": "1.9.4",
     "classnames": "2.2.6",
