--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "core-js": "2.5.7",
     "css-loader": "^1.0.0",
     "es6-object-assign": "1.1.0",
+    "ethers": "^5.6.4",
     "file-loader": "2.0.0",
     "form-data": "^4.0.0",
     "get-float-time-domain-data": "0.1.0",
